# deezer-api-docs

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: labels.yml  poetry-upgrade.yml  run.yml  scrape.yml
cypress/integration/: authenticate.spec.js
cypress/support/: index.js
output/: album.json  artist.json  chart.json  editorial.json  episode.json  genre.json  infos.json  options.json  playlist.json  podcast.json  radio.json  search.json  track.json  user.json
src/: authenticate.py  spider.py
