[tool.poetry]
name = "deezer-api-docs"
version = "0.1.0"
description = "A scraper to take snapshots of the Deezer API docs on a regular schedule."
authors = ["Bruno Alla <alla.brunoo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.5.1"
environs = "^9.5.0"
pandas = "^1.4.1"
playwright = "^1.19.0"

[tool.poetry.dev-dependencies]

[tool.isort]
profile = "black"
known_first_party = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
